--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ p, li{
 /*# sourceMappingURL=main.css.map */
 
 .banner {
-  background-image: url(../images/banner1_02_02.png);
+  background-image: url(../images/web-launches.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
